2008-12-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.0

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c:
	  (hd_change_background_dialog_class_init, get_image_label_from_uri,
	  response_cb, hd_change_background_dialog_init): Implement getting
	  list of available background images and make it possible to select
	  them.

2008-12-02  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu):
	Add call to ungrab pointer (moved from hildon-desktop).

2008-11-28  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Add hilon-fm-2 to the deps.

	* src/Makefile.am:
	* src/hd-background-dialog.c (deleted):
	* src/hd-background-dialog.h (deleted):
	* src/hd-change-background-dialog.c (added):
	* src/hd-change-background-dialog.h (added): Implement the new UI of the
	  change background dialog. Fixes NB#93117

	* src/hd-hildon-home-dbus.c: Fix grabs and ungrabs.

2008-11-28  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update entry.

	* src/hd-add-bookmark-dialog.c (hd_add_bookmark_dialog_init): Use a
	pixbuf and a text cell renderer to also display the bookmark icon.

	* src/hd-add-task-dialog.c (hd_add_task_dialog_init): Use a pixbuf and
	a text cell renderer to also display the task icon.

2008-11-28  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-manager.c (HD_KEY_FILE_DESKTOP_KEY_TRANSLATION_DOMAIN):
	Use X-Text-Domain.

2008-11-27  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog.

2008-11-27  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-applet-manager.c (items_configuration_loaded_cb): Only show
	  not yet selected applets in dialog.
	  (delete_event_cb): Remove applet from configuration if it is closed,
	  which means removed from Home.
	  (plugin_added_cb, plugin_removed_cb, run_idle, hd_applet_manager_init,